--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@ node_modules/
 /test-results/
 .env
 
+# Mac
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.Spotlight-V100
+.Trashes
+.VolumeIcon.icns
 
 #Ignore cursor AI rules
 .cursor/rules/codacy.mdc
