--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1828,3 +1828,18 @@ tasks:
       - cd .. && docker compose -f docker-compose.yml down frontend
       - echo "🚀 Starting npm dev server..."
       - npm run dev
+
+  # --- iOS Tasks ---
+  ios-build:
+    desc: "Build iOS app (scheme: Quiz). Use -p flag for interactive destination picker"
+    env:
+      DESTINATION: "{{.DESTINATION}}"
+    cmds:
+      - "{{.TASKFILE_DIR}}/scripts/ios-build.sh {{.CLI_ARGS}}"
+
+  ios-test:
+    desc: "Run iOS tests (scheme: Quiz) - defaults to Mac (iPad compatible) to avoid simulator clones. Use -p flag for interactive destination picker"
+    env:
+      DESTINATION: "{{.DESTINATION}}"
+    cmds:
+      - "{{.TASKFILE_DIR}}/scripts/ios-test.sh {{.CLI_ARGS}}"
