--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
     ],
     "eslint.options": {
         "overrideConfigFile": "frontend/.eslintrc.json"
-    }
+    },
+    "swift.SDK": "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.2.sdk"
 }
