--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,8 @@
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --ignore-pattern 'src/api/**' --max-warnings 0",
     "lint:fix": "eslint src --ext js,jsx,ts,tsx --ignore-pattern 'src/api/**' --fix",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\" --ignore-path .prettierignore",
-    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\" --ignore-path .prettierignore",
+    "format": "prettier --write \"src/**/**/*.{js,jsx,ts,tsx,json,css,md}\" --ignore-path .prettierignore",
+    "format:check": "prettier --check \"src/**/**/*.{js,jsx,ts,tsx,json,css,md}\" --ignore-path .prettierignore",
     "test:e2e": "npx playwright test",
     "generate-types": "orval --config ./orval.config.cjs",
     "test": "vitest --run --reporter=verbose",
