--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1203,7 +1203,7 @@ tasks:
       - echo "Running frontend linters..."
       - npm run format:check
       - npm run lint
-      # - npm run typecheck
+      - npm run typecheck
       - echo "✅ Frontend linting passed!"
 
   lint-ios:
